@@ -1,3 +1,8 @@
+2006-11-13  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/_cwchar.h: Patch from Michael Fink to fix EVC3
+	missing mbstate_t definition.
+
 2006-11-07  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_threads.h: Removed _Atomic_swap_struct export
